--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,7 +20,7 @@ jobs:
       java: 21, 17, 11, 8
       scala: 2.12.20
       cmd: |
-        sbt ++$MATRIX_SCALA test scripted
+        sbt "+ Test/compile" ++$MATRIX_SCALA test scripted
 
   finish:
     name: Finish
