--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,9 +18,9 @@ jobs:
     uses: playframework/.github/.github/workflows/cmd.yml@v4
     with:
       java: 21, 17, 11, 8
-      scala: 2.12.20
+      scala: 2.12.x, 3.x
       cmd: |
-        sbt "+ Test/compile" ++$MATRIX_SCALA test scripted
+        sbt ++$MATRIX_SCALA test scripted
 
   finish:
     name: Finish
